env/kubernetes/deployment-random.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: random
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: random
  template:
    metadata:
      labels:
        app: random
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8090"
    spec:
      containers:
        - name: microcommunication-random
          image: robinmanuelthiel/microcommunication-random:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "256Mi"
              cpu: "500m"
