env/kubernetes/api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
#    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "api-ingress-subnet"
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
