env/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microcommunication
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.your.domain.com
        - app.your.domain.com
      secretName: your.domain.com
  rules:
    - host: api.your.domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 8080
    - host: app.your.domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
